--- a/ExamPractice/07. Database/2014/Solution/CompanySampleDataImporter/CompanySampleDataImporter.Importer/CompanySampleDataImporter.Importer.csproj
+++ b/ExamPractice/07. Database/2014/Solution/CompanySampleDataImporter/CompanySampleDataImporter.Importer/CompanySampleDataImporter.Importer.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Importers\DepartmentsImporter.cs" />
     <Compile Include="Importers\EmpolyeesImporter.cs" />
     <Compile Include="Importers\IImporter.cs" />
+    <Compile Include="Importers\ManagersImporter.cs" />
     <Compile Include="RandomGenerator.cs" />
     <Compile Include="SampleDataImporter.cs" />
     <Compile Include="Sartup.cs" />
