--- a/CSharp/07. DesignPatterns/Practice/Task/Exam/SchoolSystem.Framework/SchoolSystem.Framework.csproj
+++ b/CSharp/07. DesignPatterns/Practice/Task/Exam/SchoolSystem.Framework/SchoolSystem.Framework.csproj
@@ -47,14 +47,19 @@
     <Compile Include="Core\Commands\RemoveTeacherCommand.cs" />
     <Compile Include="Core\Commands\StudentListMarksCommand.cs" />
     <Compile Include="Core\Commands\TeacherAddMarkCommand.cs" />
+    <Compile Include="Core\Contracts\IMarkFactory.cs" />
     <Compile Include="Core\Contracts\IParser.cs" />
     <Compile Include="Core\Contracts\IReader.cs" />
+    <Compile Include="Core\Contracts\IStudentFactory.cs" />
+    <Compile Include="Core\Contracts\ITeacherFactory.cs" />
     <Compile Include="Core\Contracts\IWriter.cs" />
     <Compile Include="Core\Engine.cs" />
     <Compile Include="Core\Providers\CommandParserProvider.cs" />
     <Compile Include="Core\Providers\ConsoleReaderProvider.cs" />
     <Compile Include="Core\Providers\ConsoleWriterProvider.cs" />
     <Compile Include="Models\Abstractions\Person.cs" />
+    <Compile Include="Models\Contracts\IAddStudent.cs" />
+    <Compile Include="Models\Contracts\IAddTeacher.cs" />
     <Compile Include="Models\Contracts\IMark.cs" />
     <Compile Include="Models\Contracts\IPerson.cs" />
     <Compile Include="Models\Contracts\IStudent.cs" />
