--- a/CSharp/07. DesignPatterns/Practice/Task/Exam/SchoolSystem.Framework/SchoolSystem.Framework.csproj
+++ b/CSharp/07. DesignPatterns/Practice/Task/Exam/SchoolSystem.Framework/SchoolSystem.Framework.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Core\Commands\RemoveTeacherCommand.cs" />
     <Compile Include="Core\Commands\StudentListMarksCommand.cs" />
     <Compile Include="Core\Commands\TeacherAddMarkCommand.cs" />
+    <Compile Include="Core\Contracts\ICommandFactory.cs" />
     <Compile Include="Core\Contracts\IMarkFactory.cs" />
     <Compile Include="Core\Contracts\IParser.cs" />
     <Compile Include="Core\Contracts\IReader.cs" />
