--- a/CSharp/07. DesignPatterns/Practice/Task/Exam/SchoolSystem.Tests/SchoolSystem.Tests.csproj
+++ b/CSharp/07. DesignPatterns/Practice/Task/Exam/SchoolSystem.Tests/SchoolSystem.Tests.csproj
@@ -82,6 +82,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Commands\CreateStudentCommandTests\Execute_Should.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
