--- a/CSharp/02. CSharp2/Practice/PracticeCSharp2/PracticeCSharp2/PracticeCSharp2.csproj
+++ b/CSharp/02. CSharp2/Practice/PracticeCSharp2/PracticeCSharp2/PracticeCSharp2.csproj
@@ -46,6 +46,7 @@
     <Compile Include="NumberPrinter.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SumNumbers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
