--- a/CSharp/02. CSharp2/Practice/PracticeCSharp2/PracticeCSharp2/PracticeCSharp2.csproj
+++ b/CSharp/02. CSharp2/Practice/PracticeCSharp2/PracticeCSharp2/PracticeCSharp2.csproj
@@ -43,10 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NumberPrinter.cs" />
+    <Compile Include="Dog.cs" />
+    <Compile Include="Interfaces\IDog.cs" />
+    <Compile Include="StaticClasses\NumberPrinter.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SumNumbers.cs" />
+    <Compile Include="StaticClasses\SumNumbers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
