--- a/CSharp/07. DesignPatterns/DIPractice/DIPractice/DIPractice.csproj
+++ b/CSharp/07. DesignPatterns/DIPractice/DIPractice/DIPractice.csproj
@@ -42,8 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleWriter.cs" />
     <Compile Include="DIPractice.cs" />
+    <Compile Include="Contracts\IWriter.cs" />
+    <Compile Include="Contracts\IMessage.cs" />
+    <Compile Include="MessageWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Solutator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
