--- a/CSharp/10. ASP.NET Core/01. ASP.NET Core Exercise/DogsServer/DogsServer/Properties/launchSettings.json
+++ b/CSharp/10. ASP.NET Core/01. ASP.NET Core Exercise/DogsServer/DogsServer/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:51751",
-      "sslPort": 44333
+      "applicationUrl": "http://localhost:58460",
+      "sslPort": 44384
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "CatsServer": {
+    "DogsServer": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
