--- a/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/CarDealer.Web.csproj
+++ b/CSharp/10. ASP.NET Core/02. Car Dealer/CarDealer.Web/CarDealer.Web.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\CarDealer.Services\CarDealer.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Customers\" />
+  </ItemGroup>
+
 </Project>
