--- a/CSharp/02. CSharp2/Practice/PracticeCSharp2/PracticeCSharp2/PracticeCSharp2.csproj
+++ b/CSharp/02. CSharp2/Practice/PracticeCSharp2/PracticeCSharp2/PracticeCSharp2.csproj
@@ -52,6 +52,7 @@
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StaticClasses\SumNumbers.cs" />
+    <Compile Include="TestExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
